--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,12 @@
 			"email": "carlo@salapc.com" ,
 			"role": "Developer"
 		}
-	]
+	] ,
+	"autoload": 
+	{
+		"psr-4": 
+		{
+			"helpers\\ViewModel\\": ""
+		}
+	}
 }
