--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
 	"description": "FluidPHP framework view model helper" ,
 	"keywords": [ "php framework" ] ,
 	"homepage": "http://phptoolcase.com" ,
-	"license": "GPL V2" ,
-  "version": "v1.0.3-stable",
+	"license": "GPL-2.0-or-later" ,
+	"version": "v1.0.3-stable",
 	"authors": 
 	[
 		{
