updated production files

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 	[
 		{
 			"name": "Carlo Pietrobattista" ,
-			"email": "carlo@salapc.com" ,
+			"email": "carlo@ground-creative.com",
 			"role": "Developer"
 		}
 	] ,
